--- a/Sources/app/i18n/fr-FR.po
+++ b/Sources/app/i18n/fr-FR.po
@@ -33,3 +33,24 @@ msgstr "nov"
 
 msgid "month12"
 msgstr "déc"
+
+msgid "day0"
+msgstr "dim"
+
+msgid "day1"
+msgstr "lun"
+
+msgid "day2"
+msgstr "mar"
+
+msgid "day3"
+msgstr "mer"
+
+msgid "day4"
+msgstr "jeu"
+
+msgid "day5"
+msgstr "ven"
+
+msgid "day6"
+msgstr "sam"
